2013-06-21  Christian Ratz <c.ratz@finn.de>

	* 3.0.3
	* Use final plugin structure and name schema

2013-06-14  Christian Ratz <c.ratz@finn.de>

	* 3.0.2
	* added dependency to OpenProject core >= 3.0.0beta1

2013-05-24  Christian Ratz <c.ratz@finn.de>

	* 3.0.1
	* Rails 3 version of the plugin as a gem

2012-11-22  Jens Ulferts <j.ulferts@finn.de>

	* 2.0.1
	* Format fix in README
	* 2.0.0
	* license changed to GPLv3
	* removes ChiliProject references

2012-11-16  Romano Licker <r.licker@finn.de>

	* Set default help link target to openproject.org

2012-07-16  Jens Ulferts <j.ulferts@finn.de>

	* 1.0.5
	* Calls menu manager less often in dev mode

2012-07-09  Jens Ulferts <j.ulferts@finn.de>

	* 1.0.4
	* cuke is no longer using selenium

2012-06-28  Jens Ulferts <j.ulferts@finn.de>

	* Hungarian translation

2012-03-05  Gregor Schmidt <g.schmidt@finn.de>

	* 1.0.3
	* Adding Credits in README.rdoc
	* 1.0.2
	* Changing the default value to point to chiliproject.org instead of redmine.org
	* Fixing the URL of chiliproject cucumber in README
	* Adding compatibility statements for ChiliProject 2.x and 3.x
	* 1.0.1

2011-08-11  Felix Schäfter <f.schaefer@finn.de>

	* Fixing a test

2011-07-21  Gregor Schmidt <g.schmidt@finn.de>

	* 1.0.0
	* This plug-in allows you to change the target of the Help link in your ChiliProject.