@@ -22,6 +22,14 @@ module OpenProject::HelpLink
       app.config.plugins_to_test_paths << self.root
     end
 
+    initializer 'help_link.append_migrations' do |app|
+      unless app.root.to_s.match root.to_s
+        config.paths["db/migrate"].expanded.each do |expanded_path|
+          app.config.paths["db/migrate"] << expanded_path
+        end
+      end
+    end
+
     config.to_prepare do
       require 'redmine/plugin'
 
