@@ -1,3 +1,6 @@
+
+* `#2545` Migrated old plugin settings
+
 2013-06-21  Christian Ratz <c.ratz@finn.de>
 
 	* 3.0.3
